--- a/sidebar/sidebar.css
+++ b/sidebar/sidebar.css
@@ -1,14 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
 #sidebar {
-    height: 90vh;
+    height: 90%;
     width: 20vw;
     position: fixed;
     right: 1px;
     bottom: 1px;
     background-color: white;
-    border: 1px black solid;
-    z-index: 99 !important;
+    border-radius: 30px 0 0 0;
+    box-shadow: 0px 0px 20px 2px rgba(56,56,56,0.5);
+    transition: all ease-in-out 0.25s;
+    z-index: 101 !important;
+}
+#sidebar:hover {
+    width: 30vw;
+}
+#sidebar-content {
+    max-height: 100%;
+    max-width: 100%;
+    padding: 10px;
+    overflow-wrap: break-word;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 iframe {
     height: 100%;
