--- a/sidebar/sidebar.css
+++ b/sidebar/sidebar.css
@@ -2,10 +2,13 @@
 
 #sidebar {
     height: 90%;
-    width: 20vw;
+    width: 5vw;
+    display: flex;
+    flex-direction: row-reverse;
     position: fixed;
     right: 1px;
     bottom: 1px;
+    padding: 10px;
     background-color: white;
     border-radius: 30px 0 0 0;
     box-shadow: 0px 0px 20px 2px rgba(56,56,56,0.5);
@@ -22,9 +25,48 @@
     overflow-wrap: break-word;
     overflow-x: hidden;
     overflow-y: auto;
+    opacity: 0;
+    transition:  all ease-in-out 0.25s;
 }
-iframe {
-    height: 100%;
-    width: 100%;
-    font-family: 'Rubik', sans-serif;
+#sidebar-content:hover {
+    opacity: 1;
 }
+#sidebar-menu {
+    max-height: 100%;
+    max-width: 10%;
+    background-color: rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #bdbdbd;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #949494;
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background: #575757;
+  }
+  ::-webkit-scrollbar-track {
+    background: #ffffff00;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+  }
+  ::-webkit-scrollbar-track:hover {
+    background: #ffffff;
+  }
+  ::-webkit-scrollbar-track:active {
+    background: #ffffff;
+  }
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
